--- a/css/app.css
+++ b/css/app.css
@@ -173,7 +173,7 @@ template {
   display: none;
 }
 
-@font-face {
+/* @font-face {
   font-family: Roboto;
   src: url(../fonts/Roboto-Medium.c19c88ee.woff2) format("woff2"),
     url(../fonts/Roboto-Medium.f22f23c8.woff) format("woff");
@@ -225,7 +225,7 @@ template {
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -777,6 +777,14 @@ textarea {
   min-height: 44px;
   font-weight: 500;
   text-transform: uppercase;
+}
+
+.button-group-wrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
 }
 
 @media (hover: hover) and (pointer: fine) {
