--- a/css/app.css
+++ b/css/app.css
@@ -875,20 +875,20 @@ textarea {
   /* height: 50px; */
 }
 
-/* .the-header__logo.centered img {
+.the-header__logo.centered img {
   display: none;
-} */
+}
 
 @media screen and (max-width: 500px) {
   .the-header {
     min-height: 280px !important;
   }
 
-  .the-header__logo img {
+  /* .the-header__logo img {
     display: none;
     height: 25px !important;
     margin-left: -20px;
-  }
+  } */
   .the-header__logo.centered img {
     height: 30px !important;
     margin-left: -20px;
