--- a/css/app.css
+++ b/css/app.css
@@ -1967,9 +1967,12 @@ button.change-locale__btn {
 
 #beskrivning {
   box-shadow: none;
-  border: 2px solid #c5c5c5;
+  /* border: 3px solid #c5c5c5; */
+  border: 3px solid #000;
   background-color: #ffffff;
 }
 #beskrivning:focus {
-  border-color: #a5a5a5 !important;
+  /* border-color: #727171 !important; */
+  border-color: #000 !important;
+  border-width: 3.6px !important;
 }
