--- a/css/app.css
+++ b/css/app.css
@@ -1967,12 +1967,12 @@ button.change-locale__btn {
 
 #beskrivning {
   box-shadow: none;
-  /* border: 3px solid #c5c5c5; */
-  border: 3px solid #000;
+  border: 3px solid #c5c5c5;
+  /* border: 5px solid #000; */
   background-color: #ffffff;
 }
-#beskrivning:focus {
-  /* border-color: #727171 !important; */
+/* #beskrivning:focus {
+  border-color: #727171 !important;
   border-color: #000 !important;
   border-width: 3.6px !important;
-}
+} */
