--- a/css/app.css
+++ b/css/app.css
@@ -1967,12 +1967,11 @@ button.change-locale__btn {
 
 #beskrivning {
   box-shadow: none;
-  border: 5px solid #c5c5c5;
+  border: 4px solid rgba(0, 0, 0, 0.12);
   /* border: 5px solid #000; */
   background-color: #ffffff;
+  transition: border 0.3ms ease-in-out;
 }
-/* #beskrivning:focus {
-  border-color: #727171 !important;
-  border-color: #000 !important;
-  border-width: 3.6px !important;
-} */
+#beskrivning:focus {
+  border-width: 5px !important;
+}
